Fixed the formatting on the education section of the Home Page, especially on mobile.

--- a/src/app/education-tile/education-tile.component.css
+++ b/src/app/education-tile/education-tile.component.css
@@ -1,6 +1,7 @@
 .education-card {
-    align-content: center;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .education-card img {
@@ -17,16 +18,10 @@
     font-size: 24px;
 }
 
-.education-card
-.education-subject,
-.education-institution {
+  .education-card
+  .education-subject,
+  .education-institution {
     font-size: 16px;
-}
-
-@media screen and (max-width: 730px) {
-  .education-card {
-    border: 1px solid;
-    border-color: darkgray;
-    border-radius: 10px;
+    text-align: center;
+    word-wrap: normal;
   }
-}
