--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -3,11 +3,7 @@
 }
 
 .education-container {
-  background-color: #212121;
-  display: block;
-  width: 100%;
   padding: 30px 0px 80px 0px;
-  margin: 40px 0px 40px 0px;
 }
 
 .education-container h1 {
@@ -27,4 +23,10 @@
 .education-tile {
   flex: 1;
   margin: 10px;
+}
+
+@media screen and (max-width: 750px) {
+    .education-items {
+        flex-direction: column;
+    }
 }
