--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,6 @@ body {
     max-width: 1080px;
     margin-left: auto;
     margin-right: auto;
-    /*display: flex;
-    flex-direction: column;
-    align-items: center;*/
 }
 
 .mobile-only {
